Auth stub and fake

--- a/src/FileSling.Web/Components/Pages/Index.razor
+++ b/src/FileSling.Web/Components/Pages/Index.razor
@@ -1,5 +1,14 @@
 ﻿@page "/"
 
+Directories Shared with you
+
 Your Directories
 
-Directories Shared with you
+<AuthorizeView>
+    <NotAuthorized>
+        <a href="fakelogin">Login now</a>
+    </NotAuthorized>
+    <Authorized>
+        Yay! I'm someone
+    </Authorized>
+</AuthorizeView>
