--- a/src/FileSling.Web/Components/Routes.razor
+++ b/src/FileSling.Web/Components/Routes.razor
@@ -2,13 +2,11 @@
 
 <Router AppAssembly="@typeof(Program).Assembly">
     <Found Context="routeData">
-        <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
-            <Authorizing>
-                Authorizing!
-            </Authorizing>
-            <NotAuthorized>
-                Not Authorized
-            </NotAuthorized>
-        </AuthorizeRouteView>
+        <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
     </Found>
+    <NotFound>
+        <LayoutView Layout="@typeof(MainLayout)">
+            <p>Sorry, there's nothing at this address.</p>
+        </LayoutView>
+    </NotFound>
 </Router>
