Implementing the first web-component

--- a/src/FileSling.Web/Components/App.razor
+++ b/src/FileSling.Web/Components/App.razor
@@ -40,5 +40,6 @@
 
     <Routes />
     <script src="_framework/blazor.web.js"></script>
+    <script defer src="@Assets["js-client/App.js"]" type="module"></script>
 </body>
 </html>
