--- a/src/FileSling.Web/Components/Pages/FakeLogin.razor
+++ b/src/FileSling.Web/Components/Pages/FakeLogin.razor
@@ -35,6 +35,7 @@
                 new ClaimsIdentity(
                     [
                         new ("sub", "843209-482390-283409"),
+                        new ("dir:test","read"),
                         new ("iss", "fake")
                     ], 
                     "Fake"
