--- a/src/FileSling.Web/Components/_Imports.razor
+++ b/src/FileSling.Web/Components/_Imports.razor
@@ -8,4 +8,6 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 
+@using Th11s.FileSling.Web.Security
+
 @inject NavigationManager Navigation;
