Getting JS to work with blazor and initialize

--- a/src/FileSling.Web/Components/Pages/Index.razor
+++ b/src/FileSling.Web/Components/Pages/Index.razor
@@ -9,6 +9,7 @@ Your Directories
         <a href="fakelogin">Login now</a>
     </NotAuthorized>
     <Authorized>
+        <CreateDirectoryForm />
         Yay! I'm someone<br />
         <a href="/ls/test">Go to a directory</a>
     </Authorized>
