More coding done

--- a/src/FileSling.Web/Components/Pages/Index.razor
+++ b/src/FileSling.Web/Components/Pages/Index.razor
@@ -10,7 +10,6 @@ Your Directories
     </NotAuthorized>
     <Authorized>
         <CreateDirectoryForm />
-        Yay! I'm someone<br />
-        <a href="/ls/test">Go to a directory</a>
+        <th11s-directory-browser></th11s-directory-browser>
     </Authorized>
 </AuthorizeView>
