--- a/src/FileSling.Web/Components/App.razor
+++ b/src/FileSling.Web/Components/App.razor
@@ -16,7 +16,7 @@
 
     <link rel="icon" href="@Assets["favico.svg"]" />
     
-    <link rel="stylesheet" href="@Assets["font-awesome.css"]" />
+    <link rel="stylesheet" href="@Assets["/lib/font-awesome/css/all.css"]" />
 
     <link rel="stylesheet" href="@Assets["app.css"]" />
     <link rel="stylesheet" href="@Assets[assemblyName + ".styles.css"]" />
