--- a/src/FileSling.Web/Components/Pages/DirectoryContents.razor
+++ b/src/FileSling.Web/Components/Pages/DirectoryContents.razor
@@ -5,6 +5,7 @@
 @attribute [StreamRendering]
 @attribute [Authorize(Policies.DirectoryReadAccess)]
 
+<th11s-directory-header directory-id="@DirectoryId"></th11s-directory-header>
 <th11s-directory-listing directory-id="@DirectoryId"></th11s-directory-listing>
 
 @code {
