--- a/src/FileSling.Web/Components/Pages/DirectoryContents.razor
+++ b/src/FileSling.Web/Components/Pages/DirectoryContents.razor
@@ -5,8 +5,8 @@
 @attribute [StreamRendering]
 @attribute [Authorize(Policies.DirectoryReadAccess)]
 
-<th11s-directory-header directory-id="@DirectoryId"></th11s-directory-header>
-<th11s-directory-listing directory-id="@DirectoryId"></th11s-directory-listing>
+<th11s-file-list-header directory-id="@DirectoryId"></th11s-file-list-header>
+<th11s-file-list directory-id="@DirectoryId"></th11s-file-list>
 
 @code {
     [Parameter]
