--- a/src/FileSling.Web/Components/Pages/Index.razor
+++ b/src/FileSling.Web/Components/Pages/Index.razor
@@ -10,6 +10,6 @@ Your Directories
     </NotAuthorized>
     <Authorized>
         <CreateDirectoryForm />
-        <th11s-directory-browser></th11s-directory-browser>
+        <th11s-directory-list></th11s-directory-list>
     </Authorized>
 </AuthorizeView>
