React components as web components and Vite

--- a/src/FileSling.Web/Components/Pages/DirectoryContents.razor
+++ b/src/FileSling.Web/Components/Pages/DirectoryContents.razor
@@ -6,6 +6,7 @@
 @attribute [Authorize(Policies.DirectoryReadAccess)]
 
 <th11s-file-list-header directory-id="@DirectoryId"></th11s-file-list-header>
+<th11s-file-upload directory-id="@DirectoryId"></th11s-file-upload>
 <th11s-file-list directory-id="@DirectoryId"></th11s-file-list>
 
 @code {
