Renames, restructures all sorts of changes

--- a/src/FileSling.Web/Components/CreateDirectoryForm.razor
+++ b/src/FileSling.Web/Components/CreateDirectoryForm.razor
@@ -1,7 +1,4 @@
-﻿<form id="create-directory-form">
-    <input type="text" placeholder="Folder Name" />
-    <button type="submit">Create Folder</button>
-</form>
+﻿<th11s-create-folder></th11s-create-folder>
 
 @code {
 
