--- a/src/FileSling.Web/Components/Layout/MainLayout.razor
+++ b/src/FileSling.Web/Components/Layout/MainLayout.razor
@@ -1,3 +1,10 @@
 ﻿@inherits LayoutComponentBase
 
-@Body
+<div class="wrapper">
+    <div class="logo">
+        <h1>FileSling</h1>
+        <img src="@Assets["favico.svg"]" alt="FileSling Logo" />
+    </div>
+
+    @Body
+</div>
