--- a/src/FileSling.Web/wwwroot/app.css
+++ b/src/FileSling.Web/wwwroot/app.css
@@ -1,1 +1,103 @@
-﻿
+﻿*, *::before, *::after {
+    box-sizing: border-box;
+}
+
+    *:not(dialog) {
+        margin: 0;
+    }
+
+@media (prefers-reduced-motion: no-preference) {
+    html {
+        interpolate-size: allow-keywords;
+    }
+}
+
+body {
+    line-height: 1.5;
+    scrollbar-gutter: stable;
+    -webkit-font-smoothing: antialiased;
+}
+
+img, picture, video, canvas, svg {
+    display: block;
+    max-width: 100%;
+}
+
+input, button, textarea, select {
+    font: inherit;
+}
+
+p, h1, h2, h3, h4, h5, h6 {
+    overflow-wrap: break-word;
+    text-wrap: balance;
+}
+
+p {
+    text-wrap: pretty;
+}
+
+
+:root {
+    color-scheme: light dark;
+    --text-color: light-dark(#151518, #faf9f6);
+    --accent-color: light-dark(#f2ab1c, #f2ab1c);
+    --background-color: light-dark(#faf9f6, #151518);
+    /* Font size */
+    --font-size: 16px;
+
+    @media (min-width: 768px) {
+        --font-size: 18px;
+    }
+
+    @media (min-width: 992px) {
+        --font-size: 20px;
+    }
+}
+
+body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: var(--font-size);
+    color: var(--text-color);
+    background-color: var(--background-color);
+}
+
+.directory-grid {
+    --column-count: 1;
+
+    @media (min-width: 768px) {
+        --column-count: 2;
+    }
+
+    @media (min-width: 992px) {
+        --column-count: 3;
+    }
+
+    @media (min-width: 1200px) {
+        --column-count: 4;
+    }
+
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(var(--column-count), 1fr);
+
+    .directory-item {
+        display: block;
+        color: inherit;
+        text-decoration: inherit;
+    }
+}
+
+.file-list-header {
+    font-weight: bold;
+    border-bottom: 2px solid var(--accent-color);
+    padding-bottom: 0.25rem;
+}
+
+.file-list {
+    .file-item {
+    }
+}
+
+.file-upload-container {
+    padding-block: 0.5rem;
+}
